# cryptopals

./: Cargo.toml
proptest-regressions/: lib.txt
src/: lib.rs
tests/: 12.txt  set1.rs  set2.rs
