[package]
name = "cryptopals"
version = "0.1.0"
authors = ["5225225 <5225225@mailbox.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.12.0"
hex = "0.4.2"
itertools = "0.9.0"
rust-crypto = "0.2.36"
proptest = "0.9.6"
rand = "0.7.3"
